--- a/indexYD.html
+++ b/indexYD.html
@@ -1,1 +1,22 @@
-<h1>Github pages test </h1>
+<html>
+ <head>
+  <title> frames </title>
+</head>
+  <frameset rows="100,*">
+    <frame id="frmsuperior" name="frmsuperior" src="encabezado de YD.html"/>
+  <frameset cols="150,*"> 
+    <frame id="frmizquierda" name="frmizquierda" src="izquierdaYD.html"/>
+    <frame id="frmcuerpo" name="frmcuerpo" src="yoshiydomi.html">
+  </fraeset>
+    <body>
+    <bgcolor="#018790">
+    <br><br><br><br><br><br>
+
+
+
+
+ </body>
+ </noframes>
+
+ </frameset>
+</html>
